# MOOSCN

./: CMakeLists.txt  README  install.cmake
application/: CMakeLists.txt  SCN_NSGAII.cpp  SCN_SPEA2.cpp
data/OptionA/: bep.csv  co2_train.csv  costs_train.csv  dcrm_dt1_costs.csv  dcrm_dt1_pm.csv  dcrm_dt2_costs.csv  dcrm_dt3_costs.csv  dcrm_dt3_pm.csv  dcrm_dt4_costs.csv  dcrm_dt4_pm.csv  dcrm_dt_co2.csv  demand.csv  epdc_dt1_costs.csv  epdc_dt1_pm.csv  epdc_dt2_costs.csv  epdc_dt2_pm.csv  epdc_dt3_costs.csv  epdc_dt4_costs.csv  epdc_dt4_pm.csv  epdc_dt_co2.csv  wrc.csv
data/OptionB/: bep.csv  co2_train.csv  costs_blocktrain.csv  dcrm_dt1_costs.csv  dcrm_dt1_pm.csv  dcrm_dt2_costs.csv  dcrm_dt2_pm.csv  dcrm_dt3_costs.csv  dcrm_dt4_costs.csv  dcrm_dt4_pm.csv  dcrm_dt_co2.csv  epdc_dt1_costs.csv  epdc_dt1_pm.csv  epdc_dt2_costs.csv  epdc_dt2_pm.csv  epdc_dt3_costs.csv  epdc_dt4_costs.csv  epdc_dt4_pm.csv  epdc_dt_co2.csv  pm_train.csv
data_old/: README
data_old/OptionA/: co2_train.csv  costs_train.csv  dcrm_dt1_costs.csv  dcrm_dt1_pm.csv  dcrm_dt2_costs.csv  dcrm_dt2_pm.csv  dcrm_dt3_costs.csv  dcrm_dt3_pm.csv  dcrm_dt4_costs.csv  dcrm_dt4_pm.csv  dcrm_dt_co2.csv  demand2.csv  epdc_dt1_costs.csv  epdc_dt1_pm.csv  epdc_dt2_costs.csv  epdc_dt2_pm.csv  epdc_dt3_costs.csv  epdc_dt4_costs.csv  epdc_dt4_pm.csv  epdc_dt_co2.csv  pm_train.csv  testdata.csv
data_old/OptionB/: bep.csv  bep.csv~  co2_train.csv  costs_blocktrain.csv  dcrm_dt1_cost.csv~  dcrm_dt1_costs.csv  dcrm_dt1_pm.csv  dcrm_dt1_pm.csv~  dcrm_dt2_cost.csv~  dcrm_dt2_costs.csv  dcrm_dt3_cost.csv~  dcrm_dt3_costs.csv  dcrm_dt3_pm.csv  dcrm_dt3_pm.csv~  dcrm_dt4_cost.csv~  dcrm_dt4_costs.csv  dcrm_dt4_pm.csv  dcrm_dt4_pm.csv~  dcrm_dt_co2.csv  dcrm_dt_co2.csv~  demand.csv  demand.csv~  epdc_blocktrain_co2.csv~  epdc_blocktrain_cost.csv~  epdc_blocktrain_pm.csv~  epdc_dt1_costs.csv  epdc_dt1_pm.csv  epdc_dt2_costs.csv  epdc_dt3_costs.csv  epdc_dt3_pm.csv  epdc_dt4_costs.csv  epdc_dt4_pm.csv  epdc_dt_co2.csv  epdc_hd1_cost.csv~  epdc_hd1_pm.csv~  epdc_hd2_cost.csv~  epdc_hd3_cost.csv~  epdc_hd3_pm.csv~  epdc_hd4_cost.csv~  epdc_hd4_pm.csv~  (+6 more)
src/: CMakeLists.txt  SCN.cpp  SCN.h  SCNCrossover.h  SCNEval.h  SCNMutation.h  SCNObjectiveVector.h  SCNObjectiveVectorTraits.cpp  SCNObjectiveVectorTraits.h  eoUIntXover.h  init_pop.h  read_data.h
